--- a/styles.css
+++ b/styles.css
@@ -1,104 +1,121 @@
-body{
-  text-transform: capitalize;
-  background-color: #2b5252;
-  background-size: contain;
-  background-attachment: fixed;
-  color: #000000;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --dark-grey: #1b1b32;
+  --light-grey: #f5f6f7;
+  --black: #000;
+  --white: #fff;
+  --grey: #3b3b4f;
+  --golden-yellow: #fecc4c;
+  --yellow: #ffcc4c;
+  --gold: #feac32;
+  --orange: #ffac33;
+  --dark-orange: #f89808;
+}
+
+body {
+  background-color: var(--dark-grey);
+}
+
+header {
+  color: var(--light-grey);
+  text-align: center;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin: 25px 0;
+}
+
+.rules-container {
+  display: none;
+  background-color: var(--light-grey);
+  color: var(--black);
+  width: 50%;
+  margin: 20px auto;
+  height: 300px;
+  border-radius: 10px;
+  overflow-y: scroll;
+}
+
+.rules-container ul {
+  list-style-type: none;
+}
+
+.points {
+  margin-top: 15px;
+}
+
+main {
+  background-color: var(--light-grey);
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 1rem;
+  margin: auto;
+  justify-items: center;
+  width: 50%;
+  border-radius: 10px;
+}
+
+#dice {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 15px;
+}
+
+.die {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  margin-right: 15px;
+  border: 4px solid var(--black);
+  padding: 10px;
+}
+
+.rounds-text {
+  text-align: center;
+}
+
+input[type="radio"]:disabled + label {
+  color: var(--grey);
+}
+
+#score-history {
+  margin-top: 15px;
+  text-align: center;
+  list-style-position: inside;
+}
+
+.btn {
+  cursor: pointer;
+  width: 200px;
+  margin: 10px 0 10px 0.5rem;
+  color: var(--black);
+  background-color: var(--gold);
+  background-image: linear-gradient(var(--golden-yellow), var(--orange));
+  border-color: var(--gold);
+  border-width: 3px;
+}
+
+.btn:hover:enabled {
+  background-image: linear-gradient(var(--yellow), var(--dark-orange));
+}
+
+@media (max-width: 992px) {
+  main {
+    width: 100%;
   }
+}
 
-a:link /*a normal, unvisited link*/, a:visited /*a link the user has visited*/
-                
-                {
-                  background-color: #000000; 
-                  color: #d2e716;
-                  padding: 0px 20px;
-                  border-radius: 15px;
-                  text-align: center;
-                  text-decoration: none;
-                  display: inline-block;
-                  
-                }
-
-a:hover /*a link when the user mouses over it*/
-        {
-          background-color: #d2e716;
-          color: #000000;
-        }        
-
-a:active /*a link the moment it is clicked*/
-        {
-          background-color: #07a098;
-          color: #ffffff;
-        }
-
-h1.one{
-        color: #000000;;
-        line-height: normal;
-        white-space: nowrap;
-        word-spacing: 5px;
-        text-shadow: 3px 1px 10px #ff0606;
-
-      } 
-
-ol {
-        background: #ff9999;
-        padding: 20px;
-      }
-      
-ul {
-        background: #3399ff;
-        padding: 20px;
-      }
-      
-ol li {
-        background: #ffe5e5;
-        color: darkred;
-        padding: 5px;
-        margin-left: 35px;
-      }
-      
-ul li {
-        background: #cce5ff;
-        color: darkblue;
-        margin: 5px;
-      }
-
-      table {
-        border-collapse: collapse;
-        width: 100%;
-      }
-      
-      th, td {
-        padding: 8px;
-        text-align: left;
-        border-bottom: 1px solid #ddd;
-      }
-      
-      tr:hover {background-color: coral;}      
-h1.two{
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-style: italic;
-        font-size: x-large;
-        font-weight: 900;
-        color: #000000;
-
-      }
-.first{
-        letter-spacing: 5px;
-        text-decoration: underline;
-        text-align: center;
-        border: 2px solid #000000;
-        background-color: #a8a8a8;
-        opacity: 0.8;
-      }
-
-.main{
-        border-image-repeat: repeat;
-        color: #000000;
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-      }
-.calling{
-          color: #a8a8a8;
-          font-family: Georgia, 'Times New Roman', Times, serif;
-        }
-/* you have to add codes here */
+@media (max-width: 500px) {
+  .btn {
+    width: 120px;
+  }
+}
