--- a/styles.css
+++ b/styles.css
@@ -1,121 +1,104 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-:root {
-  --dark-grey: #1b1b32;
-  --light-grey: #f5f6f7;
-  --black: #000;
-  --white: #fff;
-  --grey: #3b3b4f;
-  --golden-yellow: #fecc4c;
-  --yellow: #ffcc4c;
-  --gold: #feac32;
-  --orange: #ffac33;
-  --dark-orange: #f89808;
-}
-
-body {
-  background-color: var(--dark-grey);
-}
-
-header {
-  color: var(--light-grey);
-  text-align: center;
-}
-
-h1 {
-  font-size: 2.5rem;
-  margin: 25px 0;
-}
-
-.rules-container {
-  display: none;
-  background-color: var(--light-grey);
-  color: var(--black);
-  width: 50%;
-  margin: 20px auto;
-  height: 300px;
-  border-radius: 10px;
-  overflow-y: scroll;
-}
-
-.rules-container ul {
-  list-style-type: none;
-}
-
-.points {
-  margin-top: 15px;
-}
-
-main {
-  background-color: var(--light-grey);
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  gap: 1rem;
-  margin: auto;
-  justify-items: center;
-  width: 50%;
-  border-radius: 10px;
-}
-
-#dice {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 15px;
-}
-
-.die {
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  margin-right: 15px;
-  border: 4px solid var(--black);
-  padding: 10px;
-}
-
-.rounds-text {
-  text-align: center;
-}
-
-input[type="radio"]:disabled + label {
-  color: var(--grey);
-}
-
-#score-history {
-  margin-top: 15px;
-  text-align: center;
-  list-style-position: inside;
-}
-
-.btn {
-  cursor: pointer;
-  width: 200px;
-  margin: 10px 0 10px 0.5rem;
-  color: var(--black);
-  background-color: var(--gold);
-  background-image: linear-gradient(var(--golden-yellow), var(--orange));
-  border-color: var(--gold);
-  border-width: 3px;
-}
-
-.btn:hover:enabled {
-  background-image: linear-gradient(var(--yellow), var(--dark-orange));
-}
-
-@media (max-width: 992px) {
-  main {
-    width: 100%;
+.wheel {
+    border: 2px solid black;
+    border-radius: 50%;
+    margin-left: 50px;
+    position: absolute;
+    height: 55vw;
+    width: 55vw;
+    max-width: 500px;
+    max-height: 500px;
+    animation-name: wheel;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
   }
-}
 
-@media (max-width: 500px) {
-  .btn {
-    width: 120px;
+  .line {
+    background-color: black;
+    width: 50%;
+    height: 2px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform-origin: 0% 0%;
   }
-}
+  
+  .line:nth-of-type(2) {
+    transform: rotate(60deg);
+  }
+  .line:nth-of-type(3) {
+    transform: rotate(120deg);
+  }
+  .line:nth-of-type(4) {
+    transform: rotate(180deg);
+  }
+  .line:nth-of-type(5) {
+    transform: rotate(240deg);
+  }
+  .line:nth-of-type(6) {
+    transform: rotate(300deg);
+  }
+  
+  .cabin {
+    background-color: red;
+    width: 20%;
+    height: 20%;
+    position: absolute;
+    border: 2px solid;
+    transform-origin: 50% 0%;
+    animation: cabins 10s ease-in-out infinite;
+  }
+  
+  .cabin:nth-of-type(1) {
+    right: -8.5%;
+    top: 50%;
+  }
+  .cabin:nth-of-type(2) {
+    right: 17%;
+    top: 93.5%;
+  }
+  .cabin:nth-of-type(3) {
+    right: 67%;
+    top: 93.5%;
+  }
+  .cabin:nth-of-type(4) {
+    left: -8.5%;
+    top: 50%;
+  }
+  .cabin:nth-of-type(5) {
+    left: 17%;
+    top: 7%;
+  }
+  .cabin:nth-of-type(6) {
+    right: 17%;
+    top: 7%;
+  }
+  
+  @keyframes wheel {
+     0% {
+       transform: rotate(0deg);
+     }
+     100% {
+       transform: rotate(360deg);
+     }
+  }
+  
+  @keyframes cabins {
+    0% {
+      transform: rotate(0deg);
+    }
+    25% {
+      background-color: yellow;
+    }
+    50% {
+      background-color: purple;
+    }
+  
+    75%{
+      background-color: yellow;
+    }
+  
+    100% {
+      transform: rotate(-360deg);
+    }
+  }
